More CSRF and errors

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div id="app"></div>
     <script>
       window.apiData = {{ .data }}
+      window.errors = {{ .errors }}
       window.originURL = window.location.href
       window.valid = true
     </script>
